<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailUser"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    android:background="@drawable/background_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/Secondary"
            android:clickable="true"
            android:contentDescription="@string/showBtn"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_add_24"
            tools:ignore="RedundantDescriptionCheck"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            android:backgroundTint="@color/Secondary"
            app:layout_constraintBottom_toTopOf="@+id/add_btn"
            app:layout_constraintEnd_toEndOf="@+id/add_btn"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/Secondary"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/back_btn"
            app:layout_constraintEnd_toEndOf="@+id/back_btn"
            app:srcCompat="@drawable/baseline_share_24"
            android:contentDescription="@string/share"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userCiv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="@string/usernameTv"
            android:textColor="@color/Accent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/userCiv"
            app:layout_constraintStart_toStartOf="@+id/userCiv"
            app:layout_constraintTop_toBottomOf="@+id/userCiv" />

        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="14sp"
            tools:text="name"
            android:textColor="@color/Accent"
            app:layout_constraintEnd_toEndOf="@+id/nameTv"
            app:layout_constraintStart_toStartOf="@+id/nameTv"
            app:layout_constraintTop_toBottomOf="@+id/nameTv" />

        <TextView
            android:id="@+id/bioTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="12sp"
            tools:text="bio"
            android:textAlignment="center"
            android:textColor="@color/Accent"
            app:layout_constraintEnd_toEndOf="@+id/usernameTv"
            app:layout_constraintStart_toStartOf="@+id/usernameTv"
            app:layout_constraintTop_toBottomOf="@+id/usernameTv" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="@+id/bioTv"
            app:layout_constraintStart_toStartOf="@+id/bioTv"
            app:layout_constraintTop_toBottomOf="@+id/bioTv">

            <TextView
                android:id="@+id/followersTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="6dp"
                tools:text="@string/followerTv"
                android:textColor="@color/Accent"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/baseline_people_24" />

            <TextView
                android:id="@+id/followingTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="6dp"
                tools:text="@string/followingTv"
                android:textColor="@color/Accent"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/baseline_people_24" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:tabIndicatorColor="@color/Accent"
            android:contentDescription="@string/followTl"
            app:tabTextColor="@color/Accent"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
            android:contentDescription="@string/followVp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/Accent"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <ToggleButton
            android:id="@+id/favorite_toggle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/toggle_fav"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>